kubernetes/components/postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          command:
            - "postgres"
            - "-c"
            - "config_file=/etc/postgres-config/postgresql.conf"
            - "-c"
            - "hba_file=/etc/postgres-config/pg_hba.conf"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init-postgis.sh
              subPath: init-postgis.sh
            - name: postgres-config
              mountPath: /etc/postgres-config
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: init-script
          configMap:
            name: postgres-config
            items:
              - key: init-postgis.sh
                path: init-postgis.sh
        - name: postgres-config
          configMap:
            name: postgres-config
